--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "mongoose": "^5.0.17",
     "socket.io": "^2.1.0",
     "yeelight.js": "^1.0.1"
   }
