--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
     "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "yeelight.js": "^1.0.1"
   }
 }
