--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "mongoose": "^5.0.17",
-    "socket.io": "^2.1.0",
+    "mongose": "0.0.2-security",
     "socket.io-client": "^2.1.0",
     "yeelight.js": "^1.0.1"
   }
