--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^5.0.1",
-    "mongoose": "^5.0.17",
+    "lowdb": "^1.0.0",
     "socket.io-client": "^2.1.0",
     "yeelight.js": "^1.0.1"
   }
